src/tests/boolean_prefix_expression/snapshots/monkey_interpreter__tests__boolean_prefix_expression__test_boolean_prefix_expression_case_1_lexical_analysis.snap
---
source: src/tests/boolean_prefix_expression/mod.rs
assertion_line: 15
expression: tokens
---
[
    PositionedToken {
        token: Not,
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: False,
        position: Position {
            line: 1,
            column: 2,
        },
    },
]
