src/tests/boolean_prefix_expression/snapshots/monkey_interpreter__tests__boolean_prefix_expression__test_boolean_prefix_expression_case_3_environment.snap
---
source: src/tests/boolean_prefix_expression/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        current: Scope {
            variables: {},
            enclosing: None,
        },
    },
}
