src/tests/boolean_prefix_expression/snapshots/monkey_interpreter__tests__boolean_prefix_expression__test_boolean_prefix_expression_case_3_syntax_analysis.snap
---
source: src/tests/boolean_prefix_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: Prefix {
            prefix: Not,
            right_hand: Prefix {
                prefix: Not,
                right_hand: Boolean {
                    literal: true,
                },
            },
        },
    },
]
